solve overflow problem for mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,6 @@ select {
     bottom: 0;
     z-index: 0;
     overflow-x: hidden;
-    overflow-y: auto;
     opacity: 1;
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
